--- a/02-vars.yml
+++ b/02-vars.yml
@@ -6,3 +6,12 @@
     - name: Print URL
       ansible.builtin.debug:
         msg: URL = {{ URL }}
+
+- name: Vars from files
+  hosts: localhost
+  vars_files:
+    - demo-vars.yml
+  tasks:
+    - name: Print URL
+      ansible.builtin.debug:
+        msg: URL = {{ URL }}
