--- a/02-vars.yml
+++ b/02-vars.yml
@@ -32,6 +32,13 @@
       ansible.builtin.debug:
         msg: URL = {{ URL }}
 
+- name: Facts
+  hosts: localhost
+  tasks:
+    - name: Print Hostname
+      ansible.builtin.debug:
+        msg: Host Name = {{ansible_hostname}}
+
 
 
 
