--- a/02-vars.yml
+++ b/02-vars.yml
@@ -38,6 +38,10 @@
     - name: Print Hostname
       ansible.builtin.debug:
         msg: Host Name = {{ansible_hostname}} Memory = {{ ansible_memory_mb.real.free }}
+    -name: Print FQDN
+     ansible.builtin.debug:
+       msg: {{ ansible_fqdn }}
+
 
 
 
